# Env8Ndisplay

./: README.md
KiCadFiles/: EnvOpenDisplay-8D.kicad_pcb  EnvOpenDisplay-8D.kicad_pro  EnvOpenDisplay-8D.kicad_sch  IS31FL3731 - 01.kicad_sch  IS31FL3731 - 02.kicad_sch  IS31FL3731 - 03.kicad_sch  IS31FL3731 - 04.kicad_sch  fp-lib-table  sym-lib-table
KiCadFiles/production/: netlist.ipc
firmware/: CMakeLists.txt  ds3231.c  ds3231.h  is31fl3730_display.c  is31fl3730_display.h  main.c
